# dep-scan

./: .gitignore  Dockerfile  Dockerfile.al9  README.md  pyproject.toml
.github/workflows/: csafdemo.yml  dockertests.yml  gobintests.yml  justbuild.yml  pre-commit.yml  pythonapp.yml  pythonpublish.yml  repotests-lifecycle-c.yml  repotests-lifecycle-dotnet.yml  repotests-lifecycle-go.yml  repotests-lifecycle-java.yml  repotests.yml  sea-alpine.yml  sea-linux.yml  sea-mac.yml  sea-win.yml  snapshot_tests.yml
contrib/: CSAF_README.md  bench_scan.py  csaf.toml  reachability_eval.baseline.json  reachability_eval.py
contrib/bench_fixtures/: large-bom.json  sparse-bom.json
depscan/: cli.py  cli_options.py  validate_cli.py  vdb_cli.py
depscan/lib/: audit.py  bom.py  config.py  explainer.py
depscan/lib/package_query/: metadata.py  pkg_query.py
documentation/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
documentation/docs/: cli-usage.mdx  env-var.mdx  mermaid.mdx  migrate-v5-to-v6.mdx  reachability-analysis.mdx  server-usage.mdx  supported-languages.mdx  vulnerability-database.mdx
documentation/docs/analyzers/: framework-reachability.mdx  (+1 more)
test/: test_bom.py  test_cli.py  test_dosai_integration.py  test_explainer.py  test_golem_integration.py  test_htmlgen.py  test_pkg_query.py  test_rusi_integration.py  test_utils.py  test_vdb_cli.py  test_vdb_config.py
test/data/: bom-1.7.xml  dotnet-reachables.slices.json  rust-reachables.slices.json
test/data/rusi/repos/rustsec-app/: Cargo.toml
test/data/rusi/repos/rustsec-app/src/: main.rs
(+27 files in other folders)
